# fst-reader

./: .gitignore  Cargo.toml  FstDocumentation.md  LICENSE
.github/workflows/: test.yml
examples/: read.rs  vcd2fst.rs
fsts/: VerilatorBasicTests_Anon.expected.txt
fsts/fst-writer/: calyx_add_invoke.fst  multi_vc_block.fst  simple.fst
fsts/ghdl/: wellen_issue_47.fst
fsts/nvc/: wellen_issue_47.fst
fsts/partial/: minimal_2sections.fst  minimal_3sections.fst  real_signal.fst  real_signal.fst.hier  truncated_3sections.fst  truncated_3sections.fst.hier
src/: fastlz.rs  io.rs  lib.rs  reader.rs  types.rs
tests/: fst_reader_diff_tests.rs  fst_reader_tests.rs  utils.rs
